--- a/src/app/components/notifications-top/notifications-top.component.css
+++ b/src/app/components/notifications-top/notifications-top.component.css
@@ -24,7 +24,7 @@
   box-shadow: 0px 4px 15px -1px #d9d9d9;
   position: absolute;
   width: 456px;
-  /*right: 380px;*/
+  right: 0px;
 }
 
 .top-notification {
