--- a/src/app/components/notifications-top/notifications-top.component.html
+++ b/src/app/components/notifications-top/notifications-top.component.html
@@ -1,11 +1,13 @@
-<div id="show-top-notifs" [class.show-top-notifs-hover]="visibility"><span class="icon"><span class="badge">{{notificationsIn.length}}</span></span></div>
+<div id="show-top-notifs" [class.show-top-notifs-hover]="visibility" class="ml-auto"><span class="icon"><span class="badge">{{notificationsIn.length}}</span></span></div>
 <div id="top-notifications" class="top-notif" [style.display]="visibility==true?'block':'none'">
-  <span *ngFor="let notification of notifications | slice:0:4"
-          class="border-bottom top-notification notification">
-    <span class="small-text py-1">{{notification.dateString}}</span>
-    <button (click)="deleteNotification(notification)" type="button" class="close" data-dismiss="modal" aria-label="Close">
-      <span aria-hidden="true" class="close-top-notif">&times;</span>
-    </button>
-    <span>{{notification.textPreview}}</span>
-  </span>
+<span *ngFor="let notification of notifications | slice:0:4"
+      class="border-bottom top-notification notification">
+  <span class="small-text py-1">{{notification.dateString}}</span>
+  <button (click)="deleteNotification(notification)" type="button" class="close" data-dismiss="modal" aria-label="Close">
+    <span aria-hidden="true" class="close-top-notif">&times;</span>
+  </button>
+  <span>{{notification.textPreview}}</span>
+</span>
 </div>
+
+
