--- a/src/styles.css
+++ b/src/styles.css
@@ -3,24 +3,35 @@ body {
   color: #282828;
 }
 
+.navbar {
+  padding: 0;
+  z-index: 1000;
+}
+
 header, footer {
   width: 100%;
   background-color: #003399;
   height: 60px;
 }
 
-footer {
-  bottom: 0;
+.header, .footer {
+  height: 60px;
+  background-color: #003399;
+}
+
+.footer {
+  font-size: .8rem;
 }
 
 .logo {
   display: block;
   cursor: pointer;
   background-size: 23px;
-  background: url(assets/logo.png) 100% 50% no-repeat;
+  background: url(assets/logo.png) 0% 50% no-repeat;
   background-size: contain;
-  height: 37px;
+  height: 39px;
   margin: auto;
+  padding-left: 35px;
 }
 
 .logo-title {
@@ -179,4 +190,12 @@ footer {
   border-radius: 0;
   border: 0;
   box-shadow: 0px 4px 15px -1px #d9d9d9;
+}
+
+.span-footer {
+  color: #ffeeee85;
+}
+
+.span-footer-white {
+  color: #fff;
 }
