--- a/src/app/components/filters/filters.component.html
+++ b/src/app/components/filters/filters.component.html
@@ -38,7 +38,7 @@
   <div class="col-md-3">
     <div class="dropdown">
       <label (click)="addToFlags($event.target)" class="dropdown-toggle column-title">
-      <input id="nameSort" type="checkbox" class="d-none">
+      <input id="nameSortOrder" class="d-none">
         Наименование
       </label>
     </div>
