--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,109 +1,107 @@
 <header>
   <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light header">
-          <div class="navbar-brand">
-            <div class="logo logo-title">
-              Единый<br>Личный<br>Кабинет
-            </div>
-          </div>
+    <nav class="navbar navbar-expand-lg navbar-light header">
+      <div class="navbar-brand">
+        <div class="logo logo-title">
+          Единый<br>Личный<br>Кабинет
+        </div>
+      </div>
 
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link text-white" href="#">Поддержка<span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Абитуриент
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-              </li>
-              <li class="nav-item">
-                <input class="form-control mr-sm-2 icon-search-white" type="search" placeholder="Поиск" aria-label="Search">
-              </li>
-            </ul>
-          </div>
-          <div class="col-1">
-            <div>
-              <span class="ru-language chosen-lang">RU</span>
-              <span class="en-language">EN</span>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link text-white" href="#">Поддержка<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Абитуриент
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Something else here</a>
             </div>
-          </div>
-          <div  class="col-1 pr-0">
-            <app-notifications-top
-              [notificationsIn]="notificationsTop"
-              (notificationsOutTop)="setNotifications($event)"
-              (removedNotification)="setRemovedNotification($event)"
-            ></app-notifications-top>
-          </div>
-          <div class="pl-3 row">
-            <div class="col-12 d-flex">
-              <span class="avatar"></span>
-              <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Мартин
-              </a>
-              <div class="dropdown-menu  my-auto" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </div>
-            </div>
-          </div>
-        </nav>
-    </div>
-</header>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12 py-3">
-        <ul class="nav">
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Все <span class="small-text">{{length}}</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Задачи на исполнение</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Личные</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Другое</a>
-          </li>
-          <li class="nav-item ml-md-auto">
-            <a class="nav-link" href="#">Архив</a>
+            <input class="form-control mr-sm-2 icon-search-white" type="search" placeholder="Поиск" aria-label="Search">
           </li>
         </ul>
       </div>
-    </div>
-      <div class="row">
-      <div class="col-md-9">
-        <app-filters
-          (flagsOut)="setFlags($event)"
-          [uncheckInputIn]="uncheckInput"></app-filters>
-        <app-notifications
-          (notificationsOut)="setNotificationsTop($event)"
-          (uncheckInput)="setUncheckInput($event)"
+      <div class="col-1">
+        <div>
+          <span class="ru-language chosen-lang">RU</span>
+          <span class="en-language">EN</span>
+        </div>
+      </div>
+      <div  class="col-1 pr-0">
+        <app-notifications-top
           [notificationsIn]="notifications"
-          [flags]="flags"
-          [removedNotification]="removedNotification"></app-notifications>
-        <div class="row">
-          <div class="col-md-12">
+          (removedNotification)="setRemovedNotification($event)"
+        ></app-notifications-top>
+      </div>
+      <div class="pl-3 row">
+        <div class="col-12 d-flex">
+          <span class="avatar"></span>
+          <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Мартин
+          </a>
+          <div class="dropdown-menu  my-auto" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
           </div>
         </div>
       </div>
-      <div class="col-md-4">
-      </div>
+    </nav>
+  </div>
+</header>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12 py-3">
+      <ul class="nav">
+        <li class="nav-item">
+          <a class="nav-link active" href="#">Все <span class="small-text">{{length}}</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Задачи на исполнение</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Личные</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Другое</a>
+        </li>
+        <li class="nav-item ml-md-auto">
+          <a class="nav-link" href="#">Архив</a>
+        </li>
+      </ul>
     </div>
   </div>
+  <div class="row">
+    <div class="col-md-9">
+      <app-filters
+        (flagsOut)="setFlags($event)"
+        [uncheckInputIn]="uncheckInput"></app-filters>
+      <app-notifications
+        (notificationsOut)="setNotifications($event)"
+        (uncheckInput)="setUncheckInput($event)"
+        [flags]="flags"
+        [removedNotification]="removedNotification"></app-notifications>
+      <div class="row">
+        <div class="col-md-12">
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+    </div>
+  </div>
+</div>
 <footer>
   <div class="container">
     <div class="row footer align-items-center">
